--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,3 @@
-Open data course uding Git and R.
+Open data course using Git and R.
 Course diary is at:
 https://katariinaparnanen.github.io/IODS-project/
