--- a/chapter5.Rmd
+++ b/chapter5.Rmd
@@ -128,7 +128,7 @@ Seems like the variable GNI (gross national income) is explaining all the varian
 In the scaled data. PC1 explains 53.6% of the variance. Variables which explain changes in the 
 direction of PC1 are education expextancy, gross national income, education rate and life expectancy, which are all positively correlated with each other, as well as maternal mortality rate and adolescent birth rate which are positively correlated with each other but negatively correlated with the before mentioned variables.
 
-PC2 explains 16.2% of the variance and labour rate and percentage of females in the parliament explain variance in this principal component.
+PC2 explains 16.2% of the variance and female to male labour rate and percentage of females in the parliament explain variance in this principal component.
 
 Scaling made a big difference in the results since, GNI was driving most of the differences in the data because there where so huge differences in the GNIs of different countries. When we used scaling we could see the effect of other variables as well.
 
@@ -138,9 +138,9 @@ PC1 separarates countries based on GNI, education, life expectancy and maternal 
 
 Countries on the opposite scale of the PC1 include many European countries, USA, Japan, South Korea and arab states.
 
-From the scaled figure you can see quite nicely that for example Nordic countries group together. They have quite high life expectancy, GNI, education expectancy, education rate and also labour rate and percentage of females in the parliament. Then there are also countries where the GNI, etc. variables are quite high but the the labour rate and percentage of females in the parliament are low like Qatar, Kuwait, Saudi Arabia, which are oil producing arabic countries, which makes the countries separate on the PC2 axis.
+From the scaled figure you can see quite nicely that for example Nordic countries group together. They have quite high life expectancy, GNI, education expectancy, education rate and also female labour rate and percentage of females in the parliament. Then there are also countries where the GNI, etc. variables are quite high but the female labour rate and percentage of females in the parliament are low like Qatar, Kuwait, Saudi Arabia, which are oil producing arabic countries, which makes the countries separate on the PC2 axis.
 
-Many African countries are have high labour rates and percentages of females in the parliament, but don't have that high education, life expectancy and GNI. There is division between African countries based on the second component into countries with low and high high labour rates and percentages of females in the parliament. 
+Many African countries are have high female labour rates and percentages of females in the parliament, but don't have that high education, life expectancy and GNI. There is division between African countries based on the second component into countries with low and high female labour rates and percentages of females in the parliament. 
 
 
 ##Multiple correspondence analysis
