--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -9,13 +9,230 @@ output:
 
 #Analysis of longitudinal data
 
-##Read in data and explore dimensions and structure
+##Read in data and explore dimensions and structure and mofidy variables
+Factor subject ID ands groups and treatment
 ```{r}
+#Read in data
 BPRSL <- read.table("~/Documents/IODS_course/IODS-project/data/BPRSL.txt",  sep="\t", header=TRUE)
+#Explore
 str(BPRSL)
 summary(BPRSL)
+#Factor treatment and subject
+BPRSL$treatment <- factor(BPRSL$treatment)
+BPRSL$subject <- factor(BPRSL$subject)
+
+
 RATSL <- read.table("~/Documents/IODS_course/IODS-project/data/RATSL.txt",  sep="\t", header=TRUE)
+#Explore
 str(RATSL)
 summary(RATSL)
+#Factor group and ID
+RATSL$ID <- factor(RATSL$ID)
+RATSL$Group <- factor(RATSL$Group)
+```
+There are 360 observations of 5 variables in the BPRSL data. The data was loaded in R in the long format. There are several measures for each subject over several weeks of BPRS ( brief psychiatric rating scale) values used to evaluate schizophrenia. Subjects received different treatments.
+
+There are 176 observations of 5 variables in the RATSL data. There are several measures for individual rats for their weight on several weekdays. 
+
+##RATS data: Summary measure approach for longitudinal data
+
+We start by exploring the data by plotting. The data is related to weightgain in rats in different groups. We will analyse the data using summary measure (mean) and baseline and try to see if there are any differences between the means in different groups. This is a good initial analysis for longitudinal data but usually this is only the first step in data analysis.
+
+```{r}
+#Access the package ggplot2
+library(ggplot2)
+
+#Draw a line plot with rats in different groups
+ggplot(RATSL, aes(x = Time, y = Weight, group = ID)) +
+  geom_line(aes(linetype = Group)) +
+  scale_x_continuous(name = "Time (days)", breaks = seq(0, 60, 10)) +
+  scale_y_continuous(name = "Weight (grams)") +
+  theme(legend.position = "top")
+#Draw boxplot of the same thing
+ggplot(RATSL, aes(y=Weight, x=factor(Time), fill=Group)) +
+  geom_boxplot()
+
+```
+The rats in group one have lower weights than the rats in the two other groups. There seems to be no difference between groups 2 and 3. There seems to be an increase in weight over the study period. However, the starting weights are also different in the groups. There are also some rats which have exceptionally high or low weights.
+
+##Standardization
+
+Based on the previous plots it seems like it would be good to standardize the data and use starting weight as baseline. We will also look if there are any outliers by using the summary approach where we retrieve the mean and standard error values for each group.
+
+```{r}
+# Standardise the variable Weight
+RATSL <- RATSL %>%
+  group_by(Time) %>%
+  mutate(stdweigth = (Weight - mean(Weight))/sd(Weight)) %>%
+  ungroup()
+
+# Glimpse the data
+glimpse(RATSL)
+
+# Plot again with the standardised weight
+ggplot(RATSL, aes(x = Time, y = stdweigth, group = ID)) +
+  geom_line(aes(linetype = Group)) +
+  scale_x_continuous(name = "Time (days)") +
+  scale_y_continuous(name = "Standardized weight") +
+  theme(legend.position = "top")
+
+ggplot(RATSL, aes(y=stdweigth, x=factor(Time), fill=Group)) +
+  geom_boxplot()
+
+#Get the value for each time point
+n <- RATSL$Time %>% unique() %>% length()
+
+# Summary data with mean and standard error of weight by group and time 
+RATSS <- RATSL %>%
+  group_by(Group, Time) %>%
+  summarise( mean = mean(Weight), se = sd
+  (Weight)/sqrt(n) ) %>%
+  ungroup()
+
+# Glimpse the data
+glimpse(RATSS)
+
+# Plot the mean profiles with standard error in a line plot
+ggplot(RATSS, aes(x = Time, y = mean, linetype = Group, shape = Group)) +
+  geom_line() +
+  scale_linetype_manual(values = c(1:3)) +
+  geom_point(size=3) +
+  scale_shape_manual(values = c(1:3)) +
+  geom_errorbar(aes(ymin=mean-se, ymax=mean+se, linetype="1"), width=0.3) +
+  theme(legend.position = c(0.8,0.8)) +
+  scale_y_continuous(name = "mean(Weight) +/- se(Weight)") +
+  ggtitle("Line plot with means and standard errors")
+
+#Plot a boxplot by group for the means to see if there are any outliers
+ggplot(RATSS, aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  ggtitle("Means by group")
+
+# Create a summary data by treatment and subject with mean as the summary variable (ignoring baseline Time 1).
+RATSS_B <- RATSL %>%
+  filter(Time > 1) %>%
+  group_by(Group, ID) %>%
+  summarise( mean=mean(Weight) ) %>%
+  ungroup()
+
+# Glimpse the data
+glimpse(RATSS_B)
+
+
+# Draw a boxplot of the mean versus treatment
+ggplot(RATSS_B, aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun.y = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = "mean(Weight), Week day 8-46")
+
 ```
 
+Based on the plots there doesn't seem to be any big outliers. However, there is a strong influence of the starting weight on the end weight so we need to take this baseline into account.
+
+##ANOVA
+
+Next we will use analysis of variance to see if there are any significant differences in the groups. We will take the baseline into account since based on the plots there are differences in the baselines between the groups
+
+```{r}
+# Add the baseline from the original data as a new variable to the summary data
+RATSLS2 <- RATSS_B %>%
+  mutate(baseline = filter(RATSL, Time==1)$Weight)
+RATSLS2$mean <- as.numeric(RATSLS2$mean)
+
+str(RATSLS2)
+
+# Fit the linear model with the mean as the response and baseline and group as explanatory variables
+fit <- lm(mean ~ baseline + Group, data = RATSLS2)
+
+# Compute the analysis of variance table for the fitted model with anova()
+anova(fit)
+
+a0<-aov(mean ~ baseline + Group, data = RATSLS2)
+
+TukeyHSD(a0, "Group")
+
+
+```
+We can see that there are no significant differences between the groups if we take the baseline into account. If we didn't take the baseline in the model we we get a result that group is significant, even though the difference is due only to the different baselines!
+
+##BPRS data analysis using linear mixed effects models
+
+We start by exploring the data by plotting. The data is related to BPRS scores measuring scizhopheria symptoms in subjects in different treatment groups
+
+```{r}
+#Draw a line plot to see how the subjects scores look like in the two treatment groups
+ggplot(BPRSL, aes(x = week, y = bprs, linetype = as.factor(subject))) +
+  geom_line() +
+  scale_linetype_manual(values = rep(1:10, times=4)) +
+  facet_grid(. ~ treatment, labeller = label_both) +
+  theme(legend.position = "none") + 
+  scale_y_continuous(limits = c(min(BPRSL$bprs), max(BPRSL$bprs)))
+
+#Draw boxplot of the same thing
+ggplot(BPRSL, aes(y=bprs, x=factor(week))) +
+  geom_boxplot() +
+  facet_grid(. ~ treatment, labeller = label_both)
+
+
+```
+
+There aren't any visible differences between the groups but there seems to be an effect on the individual's starting score on the following scores. There is also an outlier which has a high bprs score.
+
+##Removing outliers
+
+Next we will remove the outlier subject which had scores above 70
+```{r}
+
+# Create a summary data by treatment and subject with mean as the summary variable (ignoring baseline week 0).
+BPRSL8S <- BPRSL %>%
+  filter(week > 0) %>%
+  group_by(treatment, subject) %>%
+  summarise(mean=mean(bprs) ) %>%
+  ungroup()
+
+#Summary of the results revels that there is a maximum value for mean that's 71.88, which is much higher that the mean and median.
+summary(BPRSL8S)
+
+# We will remove the subject which had a mean bprs score above 70
+
+BPRSL8S[BPRSL8S$mean>70,]#From here we see that the subject is 11 in treatment group 2
+
+BPRSL1 <- BPRSL %>% filter(!(subject=="11"&treatment==2))#Use filter to remove this subject
+
+#Plot to see that everything looks ok
+ggplot(BPRSL1, aes(x = week, y = bprs, linetype = as.factor(subject))) +
+  geom_line() +
+  scale_linetype_manual(values = rep(1:10, times=4)) +
+  facet_grid(. ~ treatment, labeller = label_both) +
+  theme(legend.position = "none") + 
+  scale_y_continuous(limits = c(min(BPRSL1$bprs), max(BPRSL1$bprs)))
+
+```
+##Linear mixed effects model
+
+Because we can see that there is an effect for the individuals starting score in the results we will need to include it in the model as an fixed effext.
+```{r}
+# access library lme4
+library(lme4)
+library(lmerTest)
+
+# Create a random intercept model
+BPRSL1_ref <- lmer(bprs ~ week + treatment + (1 | subject), data = BPRSL1, REML = FALSE)
+
+anova(BPRSL1_ref)
+# Print the summary of the model
+summary(BPRSL1_ref)
+
+# Create a random intercept model
+BPRSL1_ref1 <- lmer(bprs ~ week + treatment + (week | subject), data = BPRSL1, REML = FALSE)
+
+# Print the summary of the model
+summary(BPRSL1_ref1)
+
+anova(BPRSL1_ref)
+
+# Perform an ANOVA test on the two models
+anova(BPRSL1_ref, BPRSL1_ref1)
+```
+
+The linear mixed effexts model shows us that there is no difference on the bprs score by  treatment. However, we see that there is an effect of time because week is significant and that the score tends to decrease. When we compare the model without inter action of subject and week to the model where we have the interaction, we can see that the interaction model has a lower AIC, and is significantly better than the model without the interaction term. This means that the response to treatment varies between individuals.
